[package]
name = "cartoes-captura-taxas-rust"
version = "0.1.0"
authors = ["Leonardo de Albuquerque Gouveia <leogouv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.4", features = [ "json", "blocking" ]}
serde = {version = "1.0.110", features = ["derive"]}
serde_json = "1.0.53"

